--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "felipe/project",
+    "name": "hand/project",
     "license": "proprietary",
     "type": "project",
     "autoload": {
